src/snapshots/templates__error__test__error_unexpected_keyword.snap
---
source: src/error.rs
assertion_line: 205
expression: "Hello {% in %}"

---
Unexpected keyword: in. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% in %}
  │          ^^


